# cortex-cm

./: .dockerignore  .env.example  .gitignore  BUILD_PLAN.md  CLAUDE.md  Dockerfile  FORK_ANCESTOR.md  README.md  WORKFLOW.md  alembic.ini  docker-compose.yml  pyproject.toml
data/: ithina_dev_seed_data.xlsx
docs/: api-contract.md  architecture.md  architecture_RBAC.md  architecture_audit_logs.md  build-history.md  build-step-workflow.md  git-cheatsheet.md
migrations/: env.py
prompts/: 00-bootstrap.md  README.md  doc-replacement-investigation-prompt.md  infra-2-merge-doc-bundle.md  investigate-step-6_21_2-inventory-2026-05-20.md  investigate-tenant-orgnode-store-write-surface-2026-05-20.md  matrix-permission-verify-investigation-2026-05-17.md  refresh-schema-docs-prompt.md  retro-step-6_10_1-2026-05-15-v2.md  roos-retirement-2026-05-12-v2.md  step-1.3-ddl-stress-test.md  step-1.5-smoke-test.md  step-1_6-alembic-wrap.md  step-2.1-stub-auth.md  step-2_2a-engine-session.md  step-2_2b-fnab14-or-clause.md  step-2_3-middleware-2026-05-02.md  step-2_4-health-lifespan-2026-05-02.md  step-3.1-tenant-model-schema.md  step-3.3-tenants-router.md  step-3_0-platform-visibility-or-clause-2026-05-02.md  step-3_1-tenant-model-schema-2026-05-02.md  step-3_2-tenants-repo-2026-05-02.md  step-3_3-tenants-router-2026-05-02.md  step-3_4_5-tenant-module-access-2026-05-02.md  step-3_5-dev-seed-loader-2026-05-03.md  step-3_6-lookups-batch-endpoint-2026-05-03.md  step-4_1-cloud-sql-schema-bringup.md  step-4_2-backend-dockerfile-and-push.md  step-4_3_5-cloud-sql-seed-loader-2026-05-04.md  (+69 more)
(+272 files in other folders)
